--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "format": "npx prettier . --write"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "i18next": "^23.15.1",
     "i18next-browser-languagedetector": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^15.0.2"
+    "react-i18next": "^15.0.2",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
